--- a/Aula Web 2024.2/formulario.html
+++ b/Aula Web 2024.2/formulario.html
@@ -31,8 +31,31 @@
 <label for="musica2">blues</label><br>
 
 <input type="checkbox" id="musica3" name="musica3" value="blues">
-<label for="musica3">Jazz</label><br>
+<label for="musica3">Jazz</label>
 
+<br>
+<P></P>
+
+
+<label for="opcao"> Você concorda?</label>
+<select id="opcao"name="opcao" size="2">
+    <option valeu="sim">Sim</option>
+    <option valeu="nao"selectd>Não</option>
+    <option valeu="talvez">Talvez</option>
+</select>
+<br>
+<br>
+<br>
+<label for="fopniao">Deixe seu comentario:</label><br />
+<textarea name="mensagem"rows="10" cols="30"></textarea>
+<br>
+<br>
+<input type="submit" value="Enviar"/>
+<input type="submit" value="Limpar"/>
+<p></p>
+
+<label for="fsenha">Digite sua senha </label><br />
+<input type="passaword" name="senha" />
 </form>
 
-</htmal>
+</html>
