--- a/Aula Web 2024.2/formulario.html
+++ b/Aula Web 2024.2/formulario.html
@@ -7,7 +7,19 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+<title> Aula  de CSS</title>
+<style>
+    h1{
+        color:red
+    }
+    h2{
+        color:blueviolet
+    }
+    
+</style>
+
 </head>
+
 <body>
     
 </body>
