--- a/Aula Web 2024.2/css.html
+++ b/Aula Web 2024.2/css.html
@@ -1,3 +1,5 @@
+<Aula de CSS
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +10,11 @@
 </head>
 <body>
     <h1> Iniciando CSS</h1>
-    <p>Este é um paragrafo</p>
 </body>
-<div class="divA">
-<h1>Essa é a primeira div</h1>
-<div>
+<div class="Bloco1"></div>
+    <div class="bloco2"></div>
+    <div class="bloco3"></div>
+    <div class="bloco4"></div>
+    
+
 </html>
